--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -9,13 +9,16 @@
         @media @mobile{
             width: 100%;
             height:auto;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
         }//Phone
         .cta-txt{
             display:flex;
             flex-direction: column;
             width:100%;
             height: 100%;
-            // border: 1px solid red;
+            
             @media @mobile{
                 margin: 0;
                 width:100%;
@@ -27,27 +30,36 @@
                 padding-bottom:5rem;
                 @media @mobile{
                     padding-bottom:3rem;
+                    font-size: 13rem;
+                    text-align: center;
                 }//Phone
-            }
+            }            
             h3{
                 color:#332706;
                 font-size: 5.5rem;
                 padding-left: 4rem;
                 @media @mobile{
-                    padding-bottom:2rem;
+                    padding-top:2rem;
+                    font-size: 4rem;
+                    text-align: center;
                 }//Phone
             }//h2
         }//End of CTA TEXT
         .btn{
             padding-left:20rem;
+            @media @mobile{
+                padding-left:0;
+                margin-top: 10rem;
+                width:60%;
+            }
             .signUp{//BUTTON//
                 align-items: baseline;
                 width:40%;
                 .button-master(1.5rem, 1.5rem);
-                .hover();
+                .activate();
                 @media @mobile{
                     margin:0;
-                    width:65%;
+                    width:100%;
                 }//Phone
             }//Sign Up button
         }
@@ -56,16 +68,6 @@
         width: auto;
         height: 155vh;
         margin:0;
-        // position: fixed;
-        // top:0;
-        // left:0;
-        // width:100vw;
-        // height: 100vw;
-        // z-index: -200;
-        // min-width: 100vw;
-        // min-height: 100vw;
-        //         -webkit-transform: translateX(-50%) translateY(-50%);
-        //         transform: translateX(-50%) translateY(-50%);
     }
     .videoWrapper{ 
         position: fixed;
