--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,10 +1,10 @@
 // Mixins Here
-.hover(){
-  &:hover{
+.activate(){
+  &:active{
       background-color: lighten(@button-bg, 20%);
       box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
       color: #fff;
-      transform: translateY(-7px);
+      // transform: translateY(-7px);
   }
 }
 .button-master(@radius, @pad){
