--- a/less/global.less
+++ b/less/global.less
@@ -8,7 +8,7 @@
   body{
     padding-top: 9.85rem;
     @media @mobile{
-      // padding-top: 0rem;
+      padding-top: 6rem;
     }
   }
   html, body {
@@ -59,6 +59,9 @@
     width: 100%;
     margin: 0  auto;
     height: 80%;
+    @media @mobile{
+      height:50%;
+    }
   }
   
 .backgroundLanding{
