--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -5,7 +5,7 @@
         width:100%;
         height: 65%;
         z-index:-100;
-        // border: 1px solid red;
+        
         @media @mobile{
             width: 100%;
             height:auto;
@@ -23,6 +23,9 @@
                 margin: 0;
                 width:100%;
             }//Phone
+            @media @tablet{
+                text-align: center;
+            }
             h1{
                 color: @title-color;
                 font-size: 15rem;
