--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,11 @@ html {
 body {
   padding-top: 9.85rem;
 }
+@media (max-width: 800px) {
+  body {
+    padding-top: 6rem;
+  }
+}
 @media (max-width: 500px) {
   body {
     padding-top: 6rem;
@@ -209,6 +214,11 @@ header {
   width: 100%;
   padding: 2rem;
 }
+@media (max-width: 800px) {
+  header {
+    padding: 0.7rem;
+  }
+}
 @media (max-width: 500px) {
   header {
     padding: 0.2rem;
@@ -234,7 +244,7 @@ header .navbar .logo {
 }
 @media (max-width: 800px) {
   header .navbar .logo {
-    width: 50%;
+    width: 70%;
   }
 }
 @media (max-width: 500px) {
@@ -344,15 +354,16 @@ footer p {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 800px) {
+  .site-wrapper .CTA .cta-txt {
+    text-align: center;
+    margin-bottom: 10rem;
+  }
+}
 @media (max-width: 500px) {
   .site-wrapper .CTA .cta-txt {
     margin: 0;
     width: 100%;
-  }
-}
-@media (max-width: 800px) {
-  .site-wrapper .CTA .cta-txt {
-    text-align: center;
   }
 }
 .site-wrapper .CTA .cta-txt h1 {
@@ -382,6 +393,13 @@ footer p {
 }
 .site-wrapper .CTA .btn {
   padding-left: 20rem;
+}
+@media (max-width: 800px) {
+  .site-wrapper .CTA .btn {
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+  }
 }
 @media (max-width: 500px) {
   .site-wrapper .CTA .btn {
@@ -421,6 +439,11 @@ footer p {
   height: 155vh;
   margin: 0;
 }
+@media (max-width: 800px) {
+  .site-wrapper #bgVideo {
+    height: 100vh;
+  }
+}
 .site-wrapper .videoWrapper {
   position: fixed;
   top: 50%;
@@ -430,6 +453,12 @@ footer p {
   z-index: -200;
   -webkit-transform: translateX(-65%) translateY(-100%);
   transform: translateX(-65%) translateY(-100%);
+}
+@media (max-width: 800px) {
+  .site-wrapper .videoWrapper {
+    -webkit-transform: translateX(-80%) translateY(-60%);
+    transform: translateX(-80%) translateY(-60%);
+  }
 }
 @media (max-width: 500px) {
   .site-wrapper .videoWrapper {
