--- a/less/global.less
+++ b/less/global.less
@@ -7,6 +7,9 @@
   }
   body{
     padding-top: 9.85rem;
+    @media @tablet{
+      padding-top: 6rem;
+    }
     @media @mobile{
       padding-top: 6rem;
     }
