--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -18,14 +18,15 @@
             flex-direction: column;
             width:100%;
             height: 100%;
-            
+            @media @tablet{
+                text-align: center;
+                margin-bottom: 10rem;
+            }
             @media @mobile{
                 margin: 0;
                 width:100%;
             }//Phone
-            @media @tablet{
-                text-align: center;
-            }
+
             h1{
                 color: @title-color;
                 font-size: 15rem;
@@ -50,6 +51,11 @@
         }//End of CTA TEXT
         .btn{
             padding-left:20rem;
+            @media @tablet{
+                padding-left:0;
+                display:flex;
+                justify-content: center;
+            }
             @media @mobile{
                 padding-left:0;
                 margin-top: 10rem;
@@ -71,6 +77,9 @@
         width: auto;
         height: 155vh;
         margin:0;
+        @media @tablet{
+            height: 100vh
+        }
     }
     .videoWrapper{ 
         position: fixed;
@@ -82,6 +91,10 @@
         z-index: -200;
         -webkit-transform: translateX(-65%) translateY(-100%);
                 transform: translateX(-65%) translateY(-100%);
+            @media @tablet{
+                -webkit-transform: translateX(-80%) translateY(-60%);
+                transform: translateX(-80%) translateY(-60%);
+            }
             @media @mobile{
                 display: none;
             }
