--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,9 @@ header {
     background:@nav-bg;
     width:100%;
     padding:2rem;
+    @media @tablet {
+        padding: 0.7rem;
+    }
     @media @mobile{
         padding:0.2rem;
     }//Phone
@@ -21,7 +24,7 @@ header {
         .logo{
             width:82%;
             @media @tablet{
-                width:50%;
+                width:70%;
             }
             @media @mobile{
                 width: 60%;
