--- a/less/global.less
+++ b/less/global.less
@@ -74,3 +74,9 @@
   height: 90vh;
   background: rgba(235, 231, 231, 0.625);
 }
+.about-wrapper{
+  max-width: 1000px;
+  width: 100%;
+  margin: 0  auto;
+  height: 80%;
+}
