--- a/less/about.less
+++ b/less/about.less
@@ -1,5 +1,5 @@
 //About
-* { border: 1px solid black; }
+
 .about-wrapper{
     .top-content{
         .toptxt{
@@ -9,6 +9,25 @@
             p{
                 color:black;
             }
+        }
+    }
+    .middle-content{
+        h3{
+            color:black;
+        }
+        p{
+            color:black;
+        }
+    }
+    .team{
+        h2{
+            color:black;
+        }
+        p{
+            color:black;
+        }
+        h3{
+            color:black;
         }
     }
 }
