--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,7 +22,10 @@ header {
         }//Phone
      
         .logo{
-            width:82%;
+            width:78%;
+            @media @mvp{
+                width:65%;
+            }
             @media @tablet{
                 width:70%;
             }
