--- a/less/global.less
+++ b/less/global.less
@@ -73,6 +73,9 @@
   width:auto;
   height: 90vh;
   background: rgba(235, 231, 231, 0.625);
+  @media @mobile{
+    background-image: url("/imgs/book.jpg");
+}
 }
 .about-wrapper{
   max-width: 1000px;
