--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -66,6 +66,7 @@
                 width:40%;
                 .button-master(1.5rem, 1.5rem);
                 .activate();
+                .hover();
                 @media @mobile{
                     margin:0;
                     width:100%;
