--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,7 +7,11 @@
       // transform: translateY(-7px);
   }
 }
-
+.hover(){
+  &:hover{
+    box-shadow: 0px 15px 22px #00000048;
+  }
+}
 .button-master(@radius, @pad){
   background-color: @button-bg;
   border:1px solid @button-bg;
