--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,9 @@ img {
   margin: 0  auto;
   height: 100%;
 }
+.about-body {
+  padding-bottom: 10rem;
+}
 header {
   position: fixed;
   top: 0;
@@ -270,9 +273,9 @@ header .navbar .logo {
 }
 header .navbar nav {
   margin: 0 auto;
-  width: 15%;
+  width: 30%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 @media (max-width: 800px) {
@@ -484,27 +487,62 @@ footer p {
     display: none;
   }
 }
+.about-wrapper .top-content {
+  border: 1px red solid;
+}
 .about-wrapper .top-content .toptxt h1 {
   color: black;
 }
 .about-wrapper .top-content .toptxt p {
   color: black;
 }
+.about-wrapper .middle-content {
+  border: 1px red solid;
+  display: flex;
+  justify-content: space-around;
+}
 .about-wrapper .middle-content h3 {
   color: black;
 }
 .about-wrapper .middle-content p {
   color: black;
+  padding: 0.5rem;
+}
+.about-wrapper .middle-content .service {
+  border: 1px red solid;
+  width: 25%;
+}
+.about-wrapper .team {
+  margin: 5rem;
 }
 .about-wrapper .team h2 {
   color: black;
 }
 .about-wrapper .team p {
   color: black;
+  padding: 0.5rem;
 }
 .about-wrapper .team h3 {
   color: black;
 }
 .about-wrapper .team h4 {
   color: black;
+}
+.about-wrapper .team .teamtext {
+  text-align: center;
+  padding: 2rem;
+  border: 1px red solid;
+}
+.about-wrapper .team .bios {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 2rem;
+  border: 1px red solid;
+}
+.about-wrapper .team .bios .teamcards {
+  border: 1px red solid;
+  width: 30%;
+  height: 50rem;
+  margin: 5rem;
 }
