--- a/less/navigation.less
+++ b/less/navigation.less
@@ -36,9 +36,9 @@ header {
         }//logo
         nav{
             margin: 0 auto;
-            width:15%;
+            width:30%;
             display:flex;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
             @media @tablet{
                 width:20%; 
