--- a/less/about.less
+++ b/less/about.less
@@ -11,6 +11,14 @@
                 color:black;
             }
         }
+        .signupbtn{
+            .aboutbtn{
+                .button-master(1.5rem, 1.5rem);
+                .activate();
+                .hover();
+                width:20rem;
+            }
+        }
     }
     .middle-content{
         border:1px red solid;
@@ -58,7 +66,8 @@
                 border:1px red solid;
                 width:30%;
                 height: 50rem;
-                margin: 5rem;
+                margin: 2rem;
+                padding: 1rem;
             }
         }
 
