--- a/less/about.less
+++ b/less/about.less
@@ -68,6 +68,12 @@
                 height: 50rem;
                 margin: 2rem;
                 padding: 1rem;
+                .gitbtn{
+                    .button-master(1.5rem, 1.5rem);
+                    .activate();
+                    .hover();
+                    width:15rem;
+                }
             }
         }
 
