--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,7 @@
 @button-bg: #BF9018;
 @main-bg: #169923de; 
 @nav-bg:rgba(13, 88, 21, 0.92);
+@bio-bg: #1699237b; 
 
 //Display
 @mobile: ~"(max-width: 500px)";
