--- a/less/about.less
+++ b/less/about.less
@@ -2,44 +2,45 @@
 
 .about-wrapper{
     .top-content{
-        border:1px red solid;
+        // border:1px red solid;
         .toptxt{
             h1{
-                color:black;
+                color:@title-color;
             }
             p{
                 color:black;
             }
-        }
+        }//Top text
         .signupbtn{
             .aboutbtn{
                 .button-master(1.5rem, 1.5rem);
                 .activate();
                 .hover();
                 width:20rem;
-            }
-        }
-    }
+            }//The Sign up Button
+        }//Sign up Button Container
+    }//Top Content
     .middle-content{
-        border:1px red solid;
+        // border:1px red solid;
         display:flex;
         justify-content: space-around;
         h3{
-            color:black;
+            color:@title-color;
         }
         p{
             color:black;
             padding: 0.5rem;
         }
         .service{
-            border:1px red solid;
+            // border:1px red solid;
             width: 25%;
         }
-    }
+    }//Middle Content
     .team{
         margin:5rem;
+        
         h2{
-            color:black;
+            color:@title-color;
         }
         p{
             color:black;
@@ -49,33 +50,43 @@
             color:black;
         }
         h4{
+            padding-top: 1rem;
             color: black;
         }
         .teamtext{
             text-align: center;
             padding:2rem;
-            border:1px red solid;
+            // border:1px red solid;
+            border-bottom: 0.2rem @border-color dashed;
         }
         .bios{
             display:flex;
             flex-wrap:wrap;
             justify-content: space-around;
             margin:2rem;
-            border:1px red solid;
+            // border:1px red solid;
             .teamcards{
-                border:1px red solid;
+                display:flex;
+                flex-direction: column;
+                // border:1px red solid;
+                background:@bio-bg;
+                box-shadow: 20px 15px 22px #00000048;
                 width:30%;
                 height: 50rem;
                 margin: 2rem;
                 padding: 1rem;
+                align-items: center;
+                p{
+                    padding-bottom:2rem;
+                }
                 .gitbtn{
                     .button-master(1.5rem, 1.5rem);
                     .activate();
                     .hover();
                     width:15rem;
-                }
-            }
-        }
-
-    }
-}
+  
+                }//Git Button
+            }//Teamcards
+        }//Bios
+    }//Team
+}//about wrapper
