--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,12 +7,12 @@
       
       // transform: translateY(-7px);
   }
-}
+}//Active function on button click
 .hover(){
   &:hover{
     box-shadow: 0px 15px 22px #00000048;
   }
-}
+}//Drop shadow for button on hover
 .button-master(@radius, @pad){
   background-color: @button-bg;
   border:1px solid @button-bg;
@@ -25,4 +25,4 @@
   padding: @pad;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
-}
+}//Mast Button creator
