--- a/less/about.less
+++ b/less/about.less
@@ -2,16 +2,19 @@
 
 .about-wrapper{
     .top-content{
-        // border:1px red solid;
+        margin-bottom:10.5rem;
         .toptxt{
+            padding: 2.5rem;
             h1{
                 color:@title-color;
+                padding-bottom: 2rem;
             }
             p{
                 color:black;
             }
         }//Top text
         .signupbtn{
+            padding-left:5rem;
             .aboutbtn{
                 .button-master(1.5rem, 1.5rem);
                 .activate();
