added final images

--- a/css/index.css
+++ b/css/index.css
@@ -536,7 +536,7 @@ footer p {
   color: black;
   padding: 0.5rem;
 }
-.about-wrapper .middle-content .service {
+.about-wrapper .middle-content .middle-box {
   width: 25%;
 }
 .about-wrapper .team {
