--- a/less/about.less
+++ b/less/about.less
@@ -34,7 +34,7 @@
             color:black;
             padding: 0.5rem;
         }
-        .service{
+        .middle-box{
             // border:1px red solid;
             width: 25%;
         }
