--- a/less/about.less
+++ b/less/about.less
@@ -10,7 +10,7 @@
                 padding-bottom: 2rem;
             }
             p{
-                color:black;
+                color:@hover-color;
             }
         }//Top text
         .signupbtn{
@@ -31,7 +31,7 @@
             color:@title-color;
         }
         p{
-            color:black;
+            color:@hover-color;
             padding: 0.5rem;
         }
         .middle-box{
@@ -46,15 +46,15 @@
             color:@title-color;
         }
         p{
-            color:black;
+            color:@hover-color;
             padding: 0.5rem;
         }
         h3{
-            color:black;
+            color:@hover-color;
         }
         h4{
             padding-top: 1rem;
-            color: black;
+            color: @hover-color;
         }
         .teamtext{
             text-align: center;
