--- a/less/about.less
+++ b/less/about.less
@@ -27,6 +27,9 @@
         // border:1px red solid;
         display:flex;
         justify-content: space-around;
+        img{
+            padding-bottom:1rem;
+        }
         h3{
             color:@title-color;
         }
@@ -74,8 +77,8 @@
                 // border:1px red solid;
                 background:@bio-bg;
                 box-shadow: 20px 15px 22px #00000048;
-                width:30%;
-                height: 50rem;
+                width:40%;
+                height: 55rem;
                 margin: 2rem;
                 padding: 1rem;
                 align-items: center;
