tablet media break point done about

--- a/less/about.less
+++ b/less/about.less
@@ -84,7 +84,7 @@
                 align-items: center;
                 p{
                     padding-bottom:2rem;
-                }
+                }//P
                 .gitbtn{
                     .button-master(1.5rem, 1.5rem);
                     .activate();
@@ -92,6 +92,11 @@
                     width:15rem;
   
                 }//Git Button
+                @media @tablet{
+                    height:48rem;
+                    width:45%;
+                    margin:1rem
+                }
             }//Teamcards
         }//Bios
     }//Team
