--- a/css/index.css
+++ b/css/index.css
@@ -606,3 +606,10 @@ footer p {
 .about-wrapper .team .bios .teamcards .gitbtn:hover {
   box-shadow: 0px 15px 22px #00000048;
 }
+@media (max-width: 800px) {
+  .about-wrapper .team .bios .teamcards {
+    height: 48rem;
+    width: 45%;
+    margin: 1rem;
+  }
+}
