--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,13 +13,13 @@
     box-shadow: 0px 15px 22px #00000048;
   }
 }//Drop shadow for button on hover
-.button-master(@radius, @pad){
+.button-master(@radius, @pad, @font){
   background-color: @button-bg;
   border:1px solid @button-bg;
   color: white;
   text-align: center;
   font-weight:bold;
-  font-size: @buttonfont;
+  font-size: @font;
   border-radius: @radius;
   cursor: pointer;
   padding: @pad;
