--- a/less/about.less
+++ b/less/about.less
@@ -16,12 +16,33 @@
         .signupbtn{
             padding-left:5rem;
             .aboutbtn{
-                .button-master(1.5rem, 1.5rem);
+                .button-master(1.5rem, 1.5rem, 2rem);
                 .activate();
                 .hover();
                 width:20rem;
             }//The Sign up Button
         }//Sign up Button Container
+        @media @mobile{
+            margin-bottom: 8rem;
+            .toptxt{
+                padding:1.5rem;
+                h1{
+                    font-size: 6rem;
+                }
+            }
+            .signupbtn{
+                padding-top:5rem;
+                padding-left:10rem;
+                .aboutbtn{
+                    width:30rem;
+                    height: 8rem;
+                    a{
+                        font-size: 4rem;
+                    }
+                    
+                }
+            }
+        }
     }//Top Content
     .middle-content{
         // border:1px red solid;
@@ -40,6 +61,17 @@
         .middle-box{
             // border:1px red solid;
             width: 25%;
+        }
+        @media @mobile{
+            flex-direction: column;
+            h3{
+                font-size: 4em;
+                padding-bottom: 0.5rem;
+            }
+            .middle-box{
+                width:100%;
+                margin-bottom: 2rem;
+            }
         }
     }//Middle Content
     .team{
@@ -65,6 +97,12 @@
             // border:1px red solid;
             border-bottom: 0.2rem @border-color dashed;
         }
+        @media @mobile{
+            margin: 1rem;
+            h2{
+                font-size: 4rem;
+            }
+        }
         .bios{
             display:flex;
             flex-wrap:wrap;
@@ -86,16 +124,21 @@
                     padding-bottom:2rem;
                 }//P
                 .gitbtn{
-                    .button-master(1.5rem, 1.5rem);
+                    .button-master(1.5rem, 1.5rem, 2rem);
                     .activate();
                     .hover();
                     width:15rem;
-  
+                    
                 }//Git Button
                 @media @tablet{
                     height:48rem;
                     width:45%;
                     margin:1rem
+                }
+                @media @mobile {
+                    width: 100%;
+                    height:auto;
+                    margin:1.5rem;
                 }
             }//Teamcards
         }//Bios
