--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -64,7 +64,7 @@
             .signUp{//BUTTON//
                 align-items: baseline;
                 width:40%;
-                .button-master(1.5rem, 1.5rem);
+                .button-master(1.5rem, 1.5rem,2rem);
                 .activate();
                 .hover();
                 @media @mobile{
