--- a/less/about.less
+++ b/less/about.less
@@ -29,7 +29,7 @@
                 h1{
                     font-size: 6rem;
                 }
-            }
+            }//Top Text
             .signupbtn{
                 padding-top:5rem;
                 padding-left:10rem;
@@ -38,11 +38,10 @@
                     height: 8rem;
                     a{
                         font-size: 4rem;
-                    }
-                    
-                }
-            }
-        }
+                    }//Button Font Size 
+                }//Sign up button
+            }//Button container
+        }//Phone
     }//Top Content
     .middle-content{
         // border:1px red solid;
@@ -72,7 +71,7 @@
                 width:100%;
                 margin-bottom: 2rem;
             }
-        }
+        }//Phone
     }//Middle Content
     .team{
         margin:5rem;
@@ -102,7 +101,7 @@
             h2{
                 font-size: 4rem;
             }
-        }
+        }//Phone
         .bios{
             display:flex;
             flex-wrap:wrap;
@@ -134,12 +133,12 @@
                     height:48rem;
                     width:45%;
                     margin:1rem
-                }
+                }//Tablet
                 @media @mobile {
                     width: 100%;
                     height:auto;
                     margin:1.5rem;
-                }
+                }//Phone
             }//Teamcards
         }//Bios
     }//Team
