--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -37,7 +37,7 @@
                     font-size: 13rem;
                     text-align: center;
                 }//Phone
-            }            
+            }//H1            
             h3{
                 color:#332706;
                 font-size: 5.5rem;
@@ -55,12 +55,12 @@
                 padding-left:0;
                 display:flex;
                 justify-content: center;
-            }
+            }//Tablet
             @media @mobile{
                 padding-left:0;
                 margin-top: 10rem;
                 width:60%;
-            }
+            }//Phone
             .signUp{//BUTTON//
                 align-items: baseline;
                 width:40%;
@@ -71,6 +71,9 @@
                     margin:0;
                     width:100%;
                 }//Phone
+                a{
+                    font-size: 3.7rem;
+                }
             }//Sign Up button
         }
     }//End of CTA
