--- a/less/mixins.less
+++ b/less/mixins.less
@@ -25,4 +25,5 @@
   padding: @pad;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
-}//Mast Button creator
+}//Master Button creator
+//Change font size with nested A tag. 
