--- a/less/global.less
+++ b/less/global.less
@@ -9,10 +9,10 @@
     padding-top: 9.85rem;
     @media @tablet{
       padding-top: 6rem;
-    }
+    }//Tablet 
     @media @mobile{
       padding-top: 6rem;
-    }
+    }//Phone Index page
   }
   html, body {
     font-family: 'Roboto', sans-serif;
@@ -64,7 +64,7 @@
     height: 80%;
     @media @mobile{
       height:50%;
-    }
+    }//Phone
   }
   
 .backgroundLanding{
@@ -75,7 +75,7 @@
   background: rgba(235, 231, 231, 0.625);
   @media @mobile{
     background-image: url("/imgs/book.jpg");
-}
+}//Phone
 }
 .about-wrapper{
   max-width: 1000px;
@@ -87,5 +87,5 @@
   padding-bottom:10rem;
   @media @mobile{
     padding-bottom: 12rem;
-  }
+  }//Phone
 }
