--- a/navigationmaster.less
+++ b/navigationmaster.less
@@ -11,7 +11,6 @@ header {
         padding:0.2rem;
     }//Phone
     .navbar{
-        border: 1px red solid;
         margin: 0 auto;
         width:1000px;
         display:flex;
@@ -21,6 +20,7 @@ header {
         @media @mobile{
             width: 500px;
         }//Phone
+     
         .logo{
             width:70%;
             @media @mvp{
@@ -30,12 +30,12 @@ header {
                 width:65%;
             }
             @media @mobile{
-                width: 68%;
+                width: 60%;
             }//Phone
       
         }//logo
         nav{
-            // margin: 0 auto;
+            margin: 0 auto;
             width:30%;
             display:flex;
             justify-content: space-evenly;
