--- a/less/navigation.less
+++ b/less/navigation.less
@@ -26,8 +26,11 @@ header {
             @media @mvp{
                 width:65%;
             }
+            @media @900 {
+                width:55%;
+            }
             @media @tablet{
-                width:65%;
+                width:75%;
             }
             @media @mobile{
                 width: 68%;
