--- a/css/index.css
+++ b/css/index.css
@@ -267,9 +267,14 @@ header .navbar .logo {
     width: 65%;
   }
 }
+@media (max-width: 900px) {
+  header .navbar .logo {
+    width: 55%;
+  }
+}
 @media (max-width: 800px) {
   header .navbar .logo {
-    width: 65%;
+    width: 75%;
   }
 }
 @media (max-width: 500px) {
