--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -95,6 +95,9 @@
         z-index: -200;
         -webkit-transform: translateX(-65%) translateY(-100%);
                 transform: translateX(-65%) translateY(-100%);
+            @media @mvp{
+                width: 200%;
+            }
             @media @tablet{
                 -webkit-transform: translateX(-80%) translateY(-60%);
                 transform: translateX(-80%) translateY(-60%);
