--- a/css/index.css
+++ b/css/index.css
@@ -478,16 +478,6 @@ footer p {
   -webkit-transform: translateX(-65%) translateY(-100%);
   transform: translateX(-65%) translateY(-100%);
 }
-.site-wrapper .videoWrapper #bgVideo {
-  width: auto;
-  height: 155vh;
-  margin: 0;
-}
-@media (max-width: 800px) {
-  .site-wrapper .videoWrapper #bgVideo {
-    height: 100vh;
-  }
-}
 @media (max-width: 1000px) {
   .site-wrapper .videoWrapper {
     width: 240%;
@@ -503,6 +493,17 @@ footer p {
 @media (max-width: 500px) {
   .site-wrapper .videoWrapper {
     display: none;
+  }
+}
+.site-wrapper #bgVideo {
+  width: auto;
+  height: 155vh;
+  margin: 0;
+}
+@media (max-width: 800px) {
+  .site-wrapper #bgVideo {
+    height: 100vh;
+    width: 170%;
   }
 }
 .about-wrapper .top-content {
