added some comments

--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -89,16 +89,16 @@
                 transform: translateX(-65%) translateY(-100%);
             @media @mvp{
                 width: 240%;
-            }
+            }//mvp 1000px
             @media @tablet{
                 width: 200%;
                 -webkit-transform: translateX(-80%) translateY(-50%);
                 transform: translateX(-80%) translateY(-50%);
-            }
+            }//tablet
             @media @mobile{
                 display: none;
-            }
-        }//video
+            }//phone
+        
         #bgVideo{
             width: auto;
             height: 155vh;
@@ -106,9 +106,9 @@
             @media @tablet{
                 height: 100vh;
                 width: 170%;
-            }
-        }
-
+            }//tablet
+        }//video
+    }//video wrapper
 }//Site Wrapper
 
 
