--- a/css/index.css
+++ b/css/index.css
@@ -495,13 +495,13 @@ footer p {
     display: none;
   }
 }
-.site-wrapper #bgVideo {
+.site-wrapper .videoWrapper #bgVideo {
   width: auto;
   height: 155vh;
   margin: 0;
 }
 @media (max-width: 800px) {
-  .site-wrapper #bgVideo {
+  .site-wrapper .videoWrapper #bgVideo {
     height: 100vh;
     width: 170%;
   }
