--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -89,7 +89,7 @@
                 transform: translateX(-65%) translateY(-100%);
             @media @mvp{
                 width: 240%;
-            }//mvp 1000px
+            }//mvp
             @media @tablet{
                 width: 200%;
                 -webkit-transform: translateX(-80%) translateY(-50%);
@@ -100,13 +100,15 @@
             }//phone
         
         #bgVideo{
+            width: 155vh;
+            // height: 155vh;
+            height: 150%;
             width: auto;
-            height: 155vh;
             margin:0;
-            @media @tablet{
-                height: 100vh;
-                width: 170%;
-            }//tablet
+            // @media @tablet{
+            //     height: 100vh;
+            //     width: 170%;
+            // }//tablet
         }//video
     }//video wrapper
 }//Site Wrapper
