fixed background image on mobile sizing

--- a/less/global.less
+++ b/less/global.less
@@ -12,6 +12,7 @@
     }//Tablet 
     @media @mobile{
       padding-top: 6rem;
+      background-image: url("/imgs/book copy.jpg");
     }//Phone Index page
   }
   html, body {
@@ -63,7 +64,7 @@
     margin: 0  auto;
     height: 80%;
     @media @mobile{
-      height:50%;
+      height:50%; 
     }//Phone
   }
   
@@ -74,8 +75,8 @@
   height: 90vh;
   background: rgba(235, 231, 231, 0.625);
   @media @mobile{
-    background-image: url("/imgs/book.jpg");
-}//Phone
+    background: none;
+  }//Phone
 }
 .about-wrapper{
   max-width: 1000px;
