--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -87,9 +87,9 @@
         z-index: -200;
         -webkit-transform: translateX(-65%) translateY(-100%);
                 transform: translateX(-65%) translateY(-100%);
-            @media @mvp{
-                width: 240%;
-            }//mvp
+            // @media @mvp{
+            //     width: 240%;
+            // }//mvp
             @media @tablet{
                 width: 200%;
                 -webkit-transform: translateX(-80%) translateY(-50%);
@@ -100,15 +100,14 @@
             }//phone
         
         #bgVideo{
-            width: 155vh;
-            // height: 155vh;
+            position: fixed;
             height: 150%;
             width: auto;
             margin:0;
-            // @media @tablet{
-            //     height: 100vh;
-            //     width: 170%;
-            // }//tablet
+            @media @tablet{
+                width: 150%;
+                height: auto;
+            }//tablet
         }//video
     }//video wrapper
 }//Site Wrapper
